# garmin-workouts-mcp

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  test_schedule_cli.py  training_plan.md
.github/workflows/: ci.yml
garmin_workouts_mcp/: __init__.py  __main__.py  garmin_workout.py  main.py  models.py  schedule_training_plan.py  utils.py
scripts/: dev-setup.sh
tests/: test_garmin_workout.py  test_integration.py  test_main.py
