[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-workouts-mcp"
version = "0.6.0"
description = "Garmin Workouts MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Stev Witzel"}
]
dependencies = [
    "fastmcp>=2.9.1",
    "garth>=0.5.17",
]

[project.scripts]
garmin-workouts-mcp = "garmin_workouts_mcp.main:main"

[tool.setuptools]
packages = {find = {exclude = ["src*"]}}